integration with silkvm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.1)
-project(SilkTool)
+project(SilkTool C CXX)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS on)
 set(EXECUTABLE_NAME           "silk")
@@ -11,29 +11,30 @@ add_subdirectory(vm)
 add_subdirectory(vendor/fmt-6.1.2)
 
 add_executable(${EXECUTABLE_NAME}
-  src/main.cxx
+  "src/main.cxx"
 
   # common files
-  src/common/error.cxx
-  src/common/lexer.cxx
-  src/common/token.cxx
+  "src/common/error.cxx"
+  "src/common/lexer.cxx"
+  "src/common/token.cxx"
   
   # interpreter specific
-  src/interpreter/repl.cxx
-  src/interpreter/analyzers/checker.cxx
-  src/interpreter/analyzers/parser.cxx
-  src/interpreter/runtime/interpreter.cxx
-  src/interpreter/runtime/stdlib.cxx
-  src/interpreter/runtime/functions.cxx
-  src/interpreter/runtime/primitives.cxx
-  src/interpreter/runtime/structs.cxx
+  "src/interpreter/repl.cxx"
+  "src/interpreter/analyzers/checker.cxx"
+  "src/interpreter/analyzers/parser.cxx"
+  "src/interpreter/runtime/interpreter.cxx"
+  "src/interpreter/runtime/stdlib.cxx"
+  "src/interpreter/runtime/functions.cxx"
+  "src/interpreter/runtime/primitives.cxx"
+  "src/interpreter/runtime/structs.cxx"
 
   # compiler specific
-  src/compiler/compiler.cxx
+  "src/compiler/compiler.cxx"
 
   # util
-  src/util/parameters.cxx
-  src/util/cli.cxx
+  "src/util/parameters.cxx"
+  "src/util/cli.cxx"
+  "src/util/filepath.cxx"
 )
 
 set_target_properties(${EXECUTABLE_NAME} PROPERTIES
@@ -42,4 +43,4 @@ set_target_properties(${EXECUTABLE_NAME} PROPERTIES
 
 target_include_directories(${EXECUTABLE_NAME} PUBLIC include vm/include)
 
-target_link_libraries(${EXECUTABLE_NAME} silkvm fmt::fmt)
+target_link_libraries(${EXECUTABLE_NAME} fmt::fmt silkvm)
