--- a/editors/vscode/package.json
+++ b/editors/vscode/package.json
@@ -1,39 +1,42 @@
 {
-    "name": "silk-code",
-    "publisher": "SilkScript",
-    "displayName": "Silk Code",
-    "description": "SilkScript language support",
-    "license": "MIT",
-    "repository": {
-        "url": "https://github.com/mihnea-s/silk-script"
-    },
-    "version": "0.1.0",
-    "engines": {
-        "vscode": "^1.41.0"
-    },
-    "categories": [
-        "Programming Languages"
-    ],
-    "contributes": {
-        "languages": [
-            {
-                "id": "silkscript",
-                "aliases": [
-                    "SilkScript",
-                    "silkscript"
-                ],
-                "extensions": [
-                    ".silk"
-                ],
-                "configuration": "./language-configuration.json"
-            }
+  "name": "silk-code",
+  "publisher": "silk-script",
+  "displayName": "Silk Code",
+  "description": "Silk Script language support",
+  "license": "MIT",
+  "repository": {
+    "url": "https://github.com/mihnea-s/silk-script"
+  },
+  "version": "0.1.0",
+  "engines": {
+    "vscode": "^1.41.0"
+  },
+  "categories": [
+    "Programming Languages"
+  ],
+  "contributes": {
+    "languages": [
+      {
+        "id": "silkscript",
+        "aliases": [
+          "Silk Script",
+          "silkscript"
         ],
-        "grammars": [
-            {
-                "language": "silkscript",
-                "scopeName": "source.silk",
-                "path": "./language-syntax.yaml"
-            }
-        ]
-    }
+        "extensions": [
+          ".silk"
+        ],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "silkscript",
+        "scopeName": "source.silk",
+        "path": "./language-syntax.json"
+      }
+    ]
+  },
+  "devDependencies": {
+    "js-yaml": "^4.0.0"
+  }
 }
