Source tree restructure
- "silk/syntax" renamed to "silk/language"
- "silk/stages" renamed to "silk/pipeline"
- CLI files moved to new utility folder
- Targets are now in their own folder and namespace (i.e. silk::wasm::*)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ project(
 )
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS on)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
 
 set(SILK_COMPILER       "silk")
 set(SILK_VIRTUALMACHINE "moth")
@@ -74,22 +75,23 @@ target_link_libraries(${SILK_STDLIBRARY} ${SILK_VIRTUALMACHINE} ${C_MATH_LIB})
 
 add_executable(${SILK_COMPILER}
   "source/silk/main.cxx"
-
-  "source/silk/tools/cli.cxx"
+  "source/silk/utility/cli.cxx"
+  
   "source/silk/tools/debugger.cxx"
   "source/silk/tools/repl.cxx"
-  "source/silk/tools/stprinter.cxx"
 
-  "source/silk/syntax/package.cxx"
-  "source/silk/syntax/scanner.cxx"
+  "source/silk/language/package.cxx"
+  "source/silk/language/scanner.cxx"
   
-  "source/silk/stages/pipeline.cxx"
-  "source/silk/stages/parser.cxx"
-  "source/silk/stages/type_checker.cxx"
-  "source/silk/stages/optimizer.cxx"
+  "source/silk/pipeline/stage.cxx"
+  "source/silk/pipeline/parser.cxx"
+  "source/silk/pipeline/type_checker.cxx"
+  "source/silk/pipeline/optimizer.cxx"
+  "source/silk/pipeline/json_serializer.cxx"
+  "source/silk/pipeline/json_deserializer.cxx"
 
-  "source/silk/compiler/mothvm.cxx"
-  "source/silk/compiler/webasm.cxx"
+  "source/silk/targets/moth/compiler.cxx"
+  "source/silk/targets/wasm/compiler.cxx"
 )
 
 set_target_properties(${SILK_COMPILER} PROPERTIES
