Make system includes explicit in compile_commands.json

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,12 @@ set(SILK_VIRTUALMACHINE "moth")
 set(SILK_STDLIBRARY     "stdsilk")
 set(SILK_DOCUMENTATION  "docs")
 
-set(CMAKE_EXPORT_COMPILE_COMMANDS on)
+set(CMAKE_EXPORT_COMPILE_COMMANDS on CACHE INTERNAL "")
+
+if(CMAKE_EXPORT_COMPILE_COMMANDS)
+  set(CMAKE_C_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_C_IMPLICIT_INCLUDE_DIRECTORIES})
+  set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
+endif()
 
 # Add Sanitize profile to multiconfig generators
 get_property(CMAKE_GENERATOR_IS_MULTI_CONFIG GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
@@ -25,6 +30,10 @@ endif()
 
 set(SANITIZE_LINKER_FLAGS "-fsanitize=address")
 set(SANITIZE_COMPILER_FLAGS "${SANITIZE_LINKER_FLAGS} -fno-omit-frame-pointer")
+
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 set(CMAKE_C_FLAGS_SANITIZE             "${CMAKE_C_FLAGS_DEBUG} ${SANITIZE_COMPILER_FLAGS}"          )
 set(CMAKE_CXX_FLAGS_SANITIZE           "${CMAKE_CXX_FLAG_DEBUG} ${SANITIZE_COMPILER_FLAGS}"         )
